deploy/kubernetes/manifests/29-expose-to-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: sock-shop
  namespace: anu
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: front-end
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
